[gd_scene load_steps=14 format=3 uid="uid://dx2ooxi43pqr7"]

[ext_resource type="Script" uid="uid://qsis0vcatrai" path="res://scripts/another_cluster_blast.gd" id="1_unkp3"]
[ext_resource type="Material" uid="uid://caxu4fl34w6y0" path="res://scenes/firework_bloom_particle.tres" id="2_mj5lv"]
[ext_resource type="Shader" uid="uid://ce7x8odv5pav5" path="res://shaders/blast_outer_draw_pass_shader.gdshader" id="2_r4eqj"]
[ext_resource type="AudioStream" uid="uid://d0qptiscuq65q" path="res://assets/sounds/Firework-projectv3.mp3" id="3_r4eqj"]
[ext_resource type="AudioStream" uid="uid://bcudvud00f7is" path="res://assets/sounds/firework_crackle.mp3" id="4_w7auj"]
[ext_resource type="AudioStream" uid="uid://bp6rg1q1b3h8y" path="res://assets/sounds/firecracker_audio_stream.mp3" id="5_0qmik"]
[ext_resource type="Script" uid="uid://chkpbqmaaokv7" path="res://scripts/crackle_sound_rand.gd" id="6_4l7vq"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ieeeq"]
resource_local_to_scene = true
lifetime_randomness = 0.8
direction = Vector3(0, 1, 0)
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 20.0
scale_min = 4.0
scale_max = 6.0
sub_emitter_mode = 2
sub_emitter_amount_at_end = 10

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vrtnx"]
load_path = "res://.godot/imported/particle.png-b701fedadd53b1563f688725e6851c33.s3tc.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w7auj"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_r4eqj")
shader_parameter/albedo_tex = SubResource("CompressedTexture2D_vrtnx")
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/emission_boost = 200.0

[sub_resource type="QuadMesh" id="QuadMesh_kub2w"]
material = SubResource("ShaderMaterial_w7auj")
size = Vector2(0.2, 0.2)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gytgq"]
resource_local_to_scene = true
lifetime_randomness = 0.8
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector3(0, 1, 0)
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 20.0
scale_min = 4.0
scale_max = 6.0
turbulence_noise_strength = 8.2
turbulence_noise_scale = 6.007
turbulence_influence_min = 0.379
turbulence_influence_max = 1.0
turbulence_initial_displacement_min = -54.1
turbulence_initial_displacement_max = 20.0
sub_emitter_mode = 2
sub_emitter_amount_at_end = 10

[sub_resource type="QuadMesh" id="QuadMesh_ieeeq"]
material = ExtResource("2_mj5lv")
size = Vector2(0.1, 0.1)

[node name="AnotherClusterBlast" type="Node3D"]
script = ExtResource("1_unkp3")

[node name="OuterBlastParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
explosiveness = 0.95
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_ieeeq")
draw_pass_1 = SubResource("QuadMesh_kub2w")

[node name="BlastTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="FireworkBlast" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r4eqj")

[node name="FireworkCrackle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_w7auj")

[node name="SubParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 100
lifetime = 1.8
one_shot = true
explosiveness = 0.95
process_material = SubResource("ParticleProcessMaterial_gytgq")
draw_pass_1 = SubResource("QuadMesh_ieeeq")

[node name="SecondFireworkBlast" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r4eqj")
volume_db = -6.842
pitch_scale = 1.35

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_0qmik")
volume_db = 12.8
max_db = 4.0
script = ExtResource("6_4l7vq")
